res/main.css
#display {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  align-items: center;
  width: 100%;
  height: auto;

  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.gridpiece {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  flex-grow: 1;
  align-items: center;
  font-size: 4vw;  
  min-width: 15vw;
  min-height: 12vh;
  border: 0.5rem outset skyblue;
  border-radius: 12px;
  box-shadow: 0 0 0 0.25em lightgrey;
  margin: 2%;
  padding: 1%;
  
  user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
}

